Fixed header hiding bug on mobile

--- a/stylesheets/sass/style.scss
+++ b/stylesheets/sass/style.scss
@@ -1075,4 +1075,8 @@ footer {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+
+    &.first-separator {
+        height: 120px;
+    }
 }
